UPSTREAM: kbuild: drop FORCE from PHONY targets
(cherry pick from commit 2e8d696b79e9c68d3005a9b09a8c72625d141ea6)

These targets are marked as PHONY.  No need to add FORCE to their
dependency.

Signed-off-by: Masahiro Yamada <yamada.masahiro@socionext.com>
Signed-off-by: Michal Marek <mmarek@suse.com>
Bug: 20045882
Bug: 19198045
Change-Id: I718d46c339c99418d543cc64cabc851307e5abb7
Signed-off-by: Mohd Faraz <androiabledroid@gmail.com>
Signed-off-by: rezaadi0105 <rezaadipangestu5@gmail.com>

--- a/arch/x86/vdso/Makefile
+++ b/arch/x86/vdso/Makefile
@@ -189,7 +189,7 @@ GCOV_PROFILE := n
 #
 quiet_cmd_vdso_install = INSTALL $@
       cmd_vdso_install = cp $(obj)/$@.dbg $(MODLIB)/vdso/$@
-$(vdso-install-y): %.so: $(obj)/%.so.dbg FORCE
+$(vdso-install-y): %.so: $(obj)/%.so.dbg
 	@mkdir -p $(MODLIB)/vdso
 	$(call cmd,vdso_install)
 
