--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1115,6 +1115,7 @@ config WAKE_GESTURES
 
 config WG_DEBUG
 	bool "Wake Gestures Debug"
+	depends on WAKE_GESTURES
 	help
 	  Say Y here if you want to enable WG debug mode
 
