--- a/arch/arm64/configs/ido_defconfig
+++ b/arch/arm64/configs/ido_defconfig
@@ -3,6 +3,7 @@ CONFIG_LOCALVERSION="-Ancient"
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
 CONFIG_NO_HZ=y
+CONFIG_HZ_80=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_RCU_BOOST=y
