--- a/arch/arm64/configs/ido_defconfig
+++ b/arch/arm64/configs/ido_defconfig
@@ -1,7 +1,8 @@
 CONFIG_LOCALVERSION="-Ancient"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SYSVIPC=y
-CONFIG_AUDIT=y
+# CONFIG_AUDIT is not set
+# CONFIG_HAVE_ARCH_AUDITSYSCALL is not set
 CONFIG_NO_HZ=y
 CONFIG_HZ_80=y
 CONFIG_HIGH_RES_TIMERS=y
