--- a/arch/arm64/configs/ido_defconfig
+++ b/arch/arm64/configs/ido_defconfig
@@ -31,11 +31,17 @@ CONFIG_EMBEDDED=y
 # CONFIG_SLUB_DEBUG is not set
 CONFIG_PROFILING=y
 CONFIG_PARTITION_ADVANCED=y
-# CONFIG_IOSCHED_TEST is not set
-# CONFIG_IOSCHED_DEADLINE is not set
-# CONFIG_IOSCHED_ROW is not set
-# CONFIG_IOSCHED_CFQ is not set
+CONFIG_IOSCHED_TEST=y
+CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_ROW=y
+CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_NOOP=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_SIOPLUS=y
+CONFIG_IOSCHED_TRIPNDROID=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_DEFAULT_NOOP=y
 CONFIG_ARCH_MSM=y
