defconfig: disable batery BCL
Signed-off-by: rezaadi0105 <rezaadipangestu5@gmail.com>

--- a/arch/arm64/configs/ido_defconfig
+++ b/arch/arm64/configs/ido_defconfig
@@ -308,7 +308,7 @@ CONFIG_GPIO_SYSFS=y
 CONFIG_GPIO_QPNP_PIN=y
 CONFIG_SMB358_CHARGER=y
 CONFIG_BATTERY_CW2015=y
-CONFIG_BATTERY_BCL=y
+# CONFIG_BATTERY_BCL is not set
 CONFIG_QPNP_VM_BMS=y
 CONFIG_POWER_RESET_MSM=y
 CONFIG_MSM_PRESERVE_MEM=y
