--- a/arch/arm64/configs/ido_defconfig
+++ b/arch/arm64/configs/ido_defconfig
@@ -554,3 +554,4 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
 CONFIG_DEVKMEM=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
