--- a/arch/arm64/configs/ido_defconfig
+++ b/arch/arm64/configs/ido_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Ancient"
+CONFIG_LOCALVERSION="-Ancient-1.0"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_SYSVIPC=y
 # CONFIG_AUDIT is not set
